Fixed gap display by removing word-break and adding z-index.  Now the text can stay large-ish and still be read and aligned. Also updated a defensive formation file.

--- a/css/base.css
+++ b/css/base.css
@@ -96,6 +96,7 @@
   text-align: center;
   background-color: #333d39;
   font-size: clamp(1vw, 1.5vw, 2vw);
+	z-index: 10;
 }
 .grid-item-gap > div {
   line-height: 1;
@@ -114,7 +115,6 @@
 }
 .grid-item-gap, .grid-item-position {
   color: #f1f1f0;
-  word-break: break-all;
   line-height: 1;
 }
 .gap-text {
